<resources xmlns:xliff="http://schemas.android.com/tools">
    <string name="app_name">Swaply</string>
    <string name="loading">Caricamento</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string name="menu_category">Categoria</string>
    <string name="menu_home">Home</string>
    <string name="menu_transaction">Proposte</string>
    <string name="menu_mygame">Miei giochi</string>
    <string name="menu_exit">Esci</string>

    <string name="email_input">Email</string>
    <string name="password_input">Password(Minimo 6 caratteri)</string>
    <string name="name_input">Nome</string>

    <string name="title_toolbar_create">Crea nuovo account</string>
    <string name="title_toolbar_login">Accedi</string>

    <string name="button_login">Accedi</string>
    <string name="button_create">Registrati</string>
    <string name="button_avanti">Avanti</string>

    <string name="label_button_login_google">Accedi con Google</string>
    <string name="label_button_login_facebook">Accedi con Facebook</string>
    <string name="label_button_login_twitter">Accedi con Twitter</string>
    <string name="label_button_login_mail">Accedi con Mail</string>
    <string name="label_button_login_skip">Salta</string>

    <string name="validate_error_missing_default">Campo obbligatorio</string>

    <string name="validate_error_missing_email">Indirizzo email obbligatorio</string>
    <string name="validate_error_invalid_email">Indirizzo email non valido</string>
    <string name="validate_error_invalid_password">Password non valida</string>

    <string name="message_email_collision">L\'indirizzo mail <xliff:g id="email_addr">%1$s</xliff:g> risulta già registrato.
        Accedi con <xliff:g id="provider_name">%2$s</xliff:g>
    </string>

    <string name="provider_name_google">Google</string>

    <string name="provider_name_facebook">Facebook</string>

    <string name="provider_name_twitter">Twitter</string>

    <string name="provider_name_Email">Email</string>


</resources>
