<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/grp1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/menu_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/menu_category"
            android:icon="@drawable/ic_category"
            android:title="@string/menu_category" />
        <item
            android:id="@+id/menu_transaction"
            android:icon="@drawable/ic_category"
            android:title="@string/menu_transaction" />
        <item
            android:id="@+id/menu_mygames"
            android:icon="@drawable/ic_category"
            android:title="@string/menu_mygame" />
        <item
            android:id="@+id/menu_exit"
            android:icon="@drawable/ic_category"
            android:title="@string/menu_exit" />

    </group>
</menu>