<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.rogerio.tex.swaply.ui.auth.LoginActivity">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/background" />

    <RelativeLayout style="@style/WrapperStyle">

        <TextView
            android:id="@+id/label_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="90dp"
            android:gravity="center"
            android:text="Benvenuti in Swaply"
            android:textColor="@android:color/white"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/sign_in_button_google"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@+id/label_login"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:background="@drawable/button_google_gb"
            android:drawableLeft="@drawable/google_plus_icon"
            android:text="@string/label_button_login_google" />

        <Button
            android:id="@+id/sign_in_button_twitter"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@+id/sign_in_button_google"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/distance_between_button"
            android:background="@drawable/button_twitter_gb"
            android:drawableLeft="@drawable/twitter_icon"
            android:text="@string/label_button_login_twitter" />

        <Button
            android:id="@+id/sign_in_button_facebook"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@+id/sign_in_button_twitter"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/distance_between_button"
            android:background="@drawable/button_fb_gb"
            android:drawableLeft="@drawable/facebook_icon"
            android:text="@string/label_button_login_facebook" />

        <Button
            android:id="@+id/sign_in_button_email"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@+id/sign_in_button_facebook"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/distance_between_button"
            android:background="@drawable/button_default"
            android:drawableLeft="@drawable/email"
            android:text="@string/label_button_login_mail" />

        <Button
            android:id="@+id/button_skip"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:text="@string/label_button_login_skip" />
    </RelativeLayout>

</FrameLayout>
